--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
     Stay Productive  Section Style
     Testimonials Section Style
     Call to Action Section Style
+    Footer
 */
 
 
@@ -204,7 +205,7 @@ header {
 /* ====== Testimonials Section Style ====== */
 .testimonials {
     position: relative;
-    margin: 10rem;
+    margin: 10rem 10rem 5rem;
 }
 
 .testimonials > img {
@@ -256,8 +257,11 @@ header {
 .cta {
     background-color: var(--hero-cta-background);
     width: 60%;
-    margin: 10rem auto;
+    margin: 0 auto;
     border-radius: 5px;
+    position: relative;
+    top: 8rem;
+    box-shadow: 15px 15px 25px 0px rgba(0,0,0,0.39);
 }
 
 .cta-container {
@@ -310,4 +314,52 @@ header {
     min-height: 28px;
     padding-left: 3rem;
     padding-top: .5rem;
+}
+
+
+/* ====== Footer ====== */
+.footer-content {
+    background: var(--footer-background);
+    padding: 13rem 9rem 9rem;
+} 
+.footer-link {
+    display: grid;
+    grid-template-columns: 650px 350px 200px;
+    gap: 30px;
+    margin-top: 2rem;
+}
+.footer-link ul {
+    list-style: none;
+}
+.footer-link li {
+    margin-top: 1rem;
+}
+.contact-us {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+.usefull-link {
+    display: flex;
+    justify-content: space-around;
+}
+.footer-link img{
+    margin-right: 1rem;
+}
+.social-media li{
+    margin-left: 1.5rem;
+}
+.social-media a{
+    border: 2px solid var(--text-color);
+    padding: 0.7rem;
+    border-radius: 50%;
+    margin-right: 0.2rem;
+    transition: all .35s ease-in-out;
+}
+.social-media a:hover { 
+  color: var(--gradient-color-2);
+  border: 1px solid var(--gradient-color-2);
+}
+.usefull-link a:hover , .contact-us a:hover {
+    font-weight: 600;
 }
